Fix few positions and added fav book covers

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
     background-color: #F7F7F7;
     font-family: 'Poppins', sans-serif;
+    margin: 0px;
 }
 
 hr {
@@ -9,14 +10,37 @@ hr {
     height: 1px;
 }
 
+#top {
+    background-color: rgb(243, 243, 243);
+    height: 260px;
+}
+
 #header {
     background-color: #e7e7e7;
+    position: absolute;
+    width: 100%;
 }
 
 .doted {
-    border-top-style: dotted;
     border-width: 10px;
-    width: 10%;
+    width: 20%;
+}
+
+.bookrack {
+    display: block;
+    height: 200px;
+}
+
+.bookcover {
+    position: relative;
+    margin: 5px;
+    width: 100px;
+
+}
+
+.bookcover:hover{
+    transition-duration: 50ms;
+    width: 120px;
 }
 
 /* 
